# hydrakon_ws

./: .gitignore  Joseph_low_level_fusion  README.md
hydrakon_can/: README.md  package.xml
hydrakon_can/include/hydrakon_can/: hydrakon_can.hpp
hydrakon_can/include/hydrakon_can/FS-AI_API/FS-AI_API/: can.c  can.h  fs-ai_api.c
hydrakon_can/include/hydrakon_can/FS-AI_API/FS-AI_API_Console/: fs-ai_api_console
hydrakon_can/include/hydrakon_can/FS-AI_API/FS-AI_API_Tester/: fs-ai_api_tester
hydrakon_can/launch/: hydrakon_can_launch.py
hydrakon_can/msg/: WheelSpeed.msg
hydrakon_can/src/: hydrakon_can.cpp
scripts/: carla_cleanup.py  compare_odometry.py  cone_visualizer.py  pcd_viewer.py  set_weather.py  vehicle_control.py
src/carla_vehicle_manager/: package.xml  setup.cfg  setup.py
src/carla_vehicle_manager/carla_vehicle_manager/: gnss_node.py  imu_node.py  keyboard_control_node.py  vehicle_node.py
src/carla_vehicle_manager/config/: gnss_params.yaml  imu_params.yaml  vehicle_params.yaml
src/carla_vehicle_manager/launch/: vehicle_launch.py
src/control_module/: package.xml  setup.cfg  setup.py
src/control_module/config/: pid_params.yaml
src/control_module/control_module/: pid_controller_node.py  speed_processor_node.py  vehicle_interface_node.py
src/control_module/launch/: control_system.launch.py
src/hydrakon_can/: README.md  package.xml
src/hydrakon_can/include/hydrakon_can/: hydrakon_can.hpp
src/hydrakon_can/include/hydrakon_can/FS-AI_API/FS-AI_API/: fs-ai_api.c
src/hydrakon_can/launch/: hydrakon_can_launch.py
src/hydrakon_can/src/: hydrakon_can.cpp
src/hydrakon_launch/: package.xml  setup.cfg  setup.py
src/hydrakon_launch/config/: setup_config.rviz
src/hydrakon_launch/launch/: hydrakon_launch.py
src/lidar_cluster/: package.xml  setup.py
src/lidar_cluster/config/: lidar_cluster.yaml
src/lidar_cluster/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/lidar_cluster/install/lidar_cluster/lib/lidar_cluster/: lidar_cluster_node
src/lidar_cluster/install/lidar_cluster/share/lidar_cluster/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/lidar_cluster/lidar_cluster/: cluster_node.py
src/lidar_cluster/log/: latest_build
src/lidar_cluster/meshes/: Traffic_Cone.dae
src/lidar_handler/: package.xml  setup.cfg  setup.py
src/lidar_handler/config/: lidar_params.yaml  lidar_rviz_config.rviz
src/lidar_handler/launch/: lidar_launch.py
src/lidar_handler/lidar_handler/: lidar_node.py
src/lio_sam/: package.xml
src/lio_sam/config/: lio_sam_params.yaml  rviz2.rviz
src/lio_sam/include/: utility.hpp
src/lio_sam/launch/: lio_sam_launch.py
src/lio_sam/msg/: CloudInfo.msg
src/lio_sam/src/: featureExtraction.cpp  image_projection.cpp  imu_preintegration.cpp  mapOptimization.cpp
src/perception_module/: package.xml  setup.py
src/perception_module/config/: cartographer.lua  cartographer.rviz  lio_sam_params.yaml  navsat_params.yaml  perception_params.yaml
src/perception_module/install/: local_setup.sh  setup.sh  setup.zsh
src/perception_module/launch/: perception_launch.py
src/perception_module/log/: latest_build
src/perception_module/perception_module/: diagnostic_fusion_node.py  fusion_timer_node.py  navsat_transform_node.py
src/planning_module/: package.xml  setup.cfg  setup.py
src/planning_module/config/: planning_params.yaml
src/planning_module/launch/: planning_launch.py
src/planning_module/planning_module/: planning_node.bak.py  planning_node.py  zed_2i.py
src/zed2i_camera_sim/: package.xml  setup.cfg  setup.py
src/zed2i_camera_sim/config/: zed_params.yaml
src/zed2i_camera_sim/launch/: zed_launch.py
src/zed2i_camera_sim/zed2i_camera_sim/: zed_node.py
(+7 files in other folders)
