<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hydrakon_can</name>
  <version>0.0.0</version>
  <description>The hydrakon_can package</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>