<?xml version="1.0"?>
<package format="3">
<name>lio_sam</name>
<version>0.0.0</version>
<description>Lightweight LiDAR-Inertial Odometry for ROS 2</description>
<maintainer email="aditya@todo.com">Aditya</maintainer>
<license>MIT</license>

<buildtool_depend>ament_cmake</buildtool_depend>
<buildtool_depend>rosidl_default_generators</buildtool_depend>

<!-- Core ROS 2 dependencies -->
<depend>rclcpp</depend>
<depend>sensor_msgs</depend>
<depend>nav_msgs</depend>
<depend>geometry_msgs</depend>
<depend>std_msgs</depend>
<depend>tf2</depend>
<depend>tf2_ros</depend>
<depend>tf2_geometry_msgs</depend>

<!-- Message generation -->
<depend>rosidl_default_runtime</depend>
<depend>visualization_msgs</depend>

<!-- PCL for point cloud processing -->
<depend>pcl_conversions</depend>
<depend>pcl_msgs</depend>
<depend>libpcl-all-dev</depend>

<!-- GTSAM for graph-based optimization -->
<depend>gtsam</depend>

<!-- Eigen for linear algebra -->
<depend>eigen</depend>

<!-- YAML config parsing -->
<depend>yaml-cpp</depend>

<!-- SLAM and optimization support -->
<depend>ceres-solver</depend>

<!-- Optional visualization -->
<depend>diagnostic_updater</depend>
<depend>octomap</depend>
<depend>octomap_msgs</depend>

<!-- Additional common tools -->
<depend>message_filters</depend>
<depend>pluginlib</depend>

<!-- This tag must be outside of <export> -->
<member_of_group>rosidl_interface_packages</member_of_group>

<export>
<build_type>ament_cmake</build_type>
</export>
</package>